Version 0.6 (TBA)
=================

Enhancements:

 * Record and run macros (Dan Lucraft)
 * Name and save macros (Dan Lucraft)

New internal APIs:

 * DocumentHistory stream of changes to text (Dan Lucraft)
 * Menus can have lazy text that is generated when you look at them (Dan Lucraft)

Version 0.5 (7 September 2010)
==============================

Enhancements

 * Indenting a block of text is now a single undo operation (Johannes Wollert)
 * SCM trees are only loaded when you need them - speeds up project opening a lot (Matthew Scharley)
 * Checkbox menu items for tab view togglables (Alex Lourie)
 * Checkbox menu item for strip trailing spaces (Steven Hancock)
 * Runnables work on Windows (Mat Schaffer)
 * Open directory in command line / os directory viewer (Matthew Scharley, Delisa Mason)
 * Can press enter really fast in the FindFileDialog and it will open the correct file (Tim Felgentreff)
 * Use spoon for forking on Linux, OSX (Matthew Scharley)
 * Find-in-project streams as it finds results (Kieran Pilkington)
 * Installer doesn't need to be run as root anymore. (Dan Lucraft)
 * Splash screen (Dan Lucraft)
 * Installer loads Redcar, therefore putting all the Redcar files in the OS disk cache (Dan Lucraft)
 * Read installed JVM options and use 32bit client vm if available (Dan Lucraft & Alex Lourie)
 * Edit views now have right-click menu, with hooks for plugins (Delisa Mason)

New internal APIs

 * FileParser for reading over all files in a project (Kieran Pilkington)
 * Checkbox menu items (Alex Lourie)

Fixes:

 * Fix for autocomplete, which was randomly broken due to a load order error (Anko painting)
 * [Bug 300] Remove duplicate snippets (requires deleting your Textmate cache file)(Dan Lucraft)
 * [Bug 297] New files can be immediately opened from the directory tree again (Dan Lucraft)
 * [Bug 302] Search/replace won't infinitely recurse when the search string is a prefixed substring of the replace text. (Dan Lucraft)