@@ -1,0 +1,86 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Macro Manager</title>
+    <% redcar_css = File.expand_path(File.join(Redcar.root, %w(plugins html_view assets redcar.css))) %>
+    <link rel="stylesheet" href="file://<%= redcar_css %>" type="text/css" media="screen">
+    <% jquery_path = File.expand_path(File.join(Redcar.root, %w(plugins html_view assets jquery-1.4.min.js))) %>
+    <script type="text/javascript" src="file://<%= jquery_path %>"></script>
+  </head>
+  <body>
+    <script type="text/javascript" src="file://<%= Redcar::HtmlView.jquery_path %>"></script>
+    <h3>Macro Manager</h3>
+    <h4>Unsaved Macros</h4>
+    <% if Macros.session_macros.any? %>
+      <table>
+        <% Macros.session_macros.each_with_index do |macro, i| %>
+          <tr>
+            <td class="macro-name"><%= macro.name %></td>
+            <td><a class="show-actions" href="#">Show Actions</a></td>
+            <td><a class="assign-name" href="#">Assign Name and Save</a></td>
+            <td><a class="delete-macro" href="#">Delete Macro</a></td>
+          </tr>
+          <%= macro_steps(macro) %>
+        <% end %>
+      </table>
+    <% else %>
+      None
+    <% end %>
+
+    <h4>Saved Macros</h4>
+    <% if Macros.saved_macros.any? %>
+      <table>
+        <% Macros.saved_macros.reverse.each do |macro| %>
+          <tr>
+            <td class="macro-name"><%= macro.name %></td>
+            <td><a class="show-actions" href="#">Show Actions</a></td>
+            <td><a class="rename-macro" href="#">Rename</a></td>
+            <td><a class="delete-macro" href="#">Delete Macro</a></td>
+          </tr>
+        <%= macro_steps(macro) %>
+        <% end %>
+      </table>
+    <% else %>
+      None
+    <% end %>
+  </body>
+</html>
+
+<script language="javascript">
+  $("a.assign-name").click(function(e) {
+    e.preventDefault();
+    var macroName = $(this).parent().parent().find(".macro-name").text();
+    try {
+      Controller.assignName(macroName);
+      Controller.reloadIndex();
+    } catch(e) {
+      alert(e.message);
+    }
+  });
+  $("a.show-actions").click(function(e) {
+    e.preventDefault();
+    var actions = $(this).parent().parent().next(".macro-actions");
+    actions.show();
+  });
+  
+  $("a.rename-macro").click(function(e) {
+    e.preventDefault();
+    var macroName = $(this).parent().parent().find(".macro-name").text();
+    try {
+      Controller.renameMacro(macroName);
+      Controller.reloadIndex();
+    } catch(e) {
+      alert(e.message);
+    }
+  });
+  $("a.delete-macro").click(function(e) {
+    e.preventDefault();
+    var macroName = $(this).parent().parent().find(".macro-name").text();
+    try {
+      Controller.deleteMacro(macroName);
+      Controller.reloadIndex();
+    } catch(e) {
+      alert(e.message);
+    }
+  });
+</script>
