@@ -5,6 +5,7 @@ Enhancements:
 
  * Record and run macros (Dan Lucraft)
  * Name and save macros (Dan Lucraft)
+ * Macro manager to save, rename and delete macros (Dan Lucraft)
 
 New internal APIs:
 
